cmake_minimum_required(VERSION 3.10)
project(veil)

set(CMAKE_CXX_STANDARD 11)

add_compile_definitions(ENABLE_WALLET=1)
add_compile_definitions(USE_NUM_GMP)

include_directories(src)
include_directories(src/bench)
include_directories(src/compat)
include_directories(src/consensus)
include_directories(src/crypto)
include_directories(src/crypto/ctaes)
include_directories(src/crypto/external)
include_directories(src/crypto/x16r)
include_directories(src/index)
include_directories(src/interfaces)
include_directories(src/leveldb/db)
include_directories(src/leveldb/helpers/memenv)
include_directories(src/leveldb/include)
include_directories(src/leveldb/include/leveldb)
include_directories(src/leveldb/port)
include_directories(src/leveldb/port/win)
include_directories(src/leveldb/table)
include_directories(src/leveldb/util)
include_directories(src/libzerocoin)
include_directories(src/policy)
include_directories(src/primitives)
include_directories(src/qt)
include_directories(src/qt/veil)
include_directories(src/qt/veil/settings)
include_directories(src/rpc)
include_directories(src/script)
include_directories(src/secp256k1/contrib)
include_directories(src/secp256k1/include)
include_directories(src/secp256k1/src)
include_directories(src/secp256k1/src/java)
include_directories(src/secp256k1/src/modules)
include_directories(src/secp256k1/src/modules/ecdh)
include_directories(src/secp256k1/src/modules/generator)
include_directories(src/secp256k1/src/modules/mlsag)
include_directories(src/secp256k1/src/modules/rangeproof)
include_directories(src/secp256k1/src/modules/recovery)
include_directories(src/secp256k1/src/modules/schnorr)
include_directories(src/secp256k1/src/modules/surjection)
include_directories(src/secp256k1/src/modules/whitelist)
include_directories(src/support)
include_directories(src/support/allocators)
include_directories(src/test)
include_directories(src/univalue/include)
include_directories(src/univalue/lib)
include_directories(src/veil)
include_directories(src/veil/mnemonic)
include_directories(src/veil/proofoffullnode)
include_directories(src/veil/proofofstake)
include_directories(src/veil/qt)
include_directories(src/veil/ringct)
include_directories(src/veil/zerocoin)
include_directories(src/wallet)
include_directories(src/wallet/test)
include_directories(src/zmq)

find_package(Qt5 REQUIRED COMPONENTS Widgets Core Gui)

add_executable(veil
        src/veil/invalid_list.cpp
        src/veil/invalid.cpp
        src/veil/invalid.h
        src/libzerocoin/PubcoinSignature.h
        src/libzerocoin/PubcoinSignature.cpp
        src/veil/zerocoin/witness.h
        src/veil/zerocoin/witness.cpp
        src/bench/base58.cpp
        src/bench/bech32.cpp
        src/bench/bench.cpp
        src/bench/bench.h
        src/bench/bench_veil.cpp
        src/bench/block_assemble.cpp
        src/bench/ccoins_caching.cpp
        src/bench/checkblock.cpp
        src/bench/checkqueue.cpp
        src/bench/coin_selection.cpp
        src/bench/crypto_hash.cpp
        src/bench/examples.cpp
        src/bench/lockedpool.cpp
        src/bench/mempool_eviction.cpp
        src/bench/merkle_root.cpp
        src/bench/prevector.cpp
        src/bench/rollingbloom.cpp
        src/bench/verify_script.cpp
        src/compat/byteswap.h
        src/compat/endian.h
        src/compat/glibc_compat.cpp
        src/compat/glibc_sanity.cpp
        src/compat/glibcxx_sanity.cpp
        src/compat/sanity.h
        src/compat/strnlen.cpp
        src/consensus/consensus.h
        src/consensus/merkle.cpp
        src/consensus/merkle.h
        src/consensus/params.h
        src/consensus/tx_verify.cpp
        src/consensus/tx_verify.h
        src/consensus/validation.h
        src/crypto/ctaes/bench.c
        src/crypto/ctaes/ctaes.c
        src/crypto/ctaes/ctaes.h
        src/crypto/ctaes/test.c
        src/crypto/external/hmac_sha256.c
        src/crypto/external/hmac_sha256.h
        src/crypto/external/hmac_sha512.c
        src/crypto/external/hmac_sha512.h
        src/crypto/external/pkcs5_pbkdf2.c
        src/crypto/external/pkcs5_pbkdf2.h
        src/crypto/external/sha256.c
        src/crypto/external/sha256.h
        src/crypto/external/sha512.c
        src/crypto/external/sha512.h
        src/crypto/external/zeroize.c
        src/crypto/external/zeroize.h
        src/crypto/x16r/aes_helper.c
        src/crypto/x16r/blake.c
        src/crypto/x16r/bmw.c
        src/crypto/x16r/cubehash.c
        src/crypto/x16r/echo.c
        src/crypto/x16r/groestl.c
        src/crypto/x16r/jh.c
        src/crypto/x16r/keccak.c
        src/crypto/x16r/luffa.c
        src/crypto/x16r/md_helper.c
        src/crypto/x16r/sha2.c
        src/crypto/x16r/sha256_sse4.cpp
        src/crypto/x16r/shavite.c
        src/crypto/x16r/simd.c
        src/crypto/x16r/skein.c
        src/crypto/x16r/sph_blake.h
        src/crypto/x16r/sph_bmw.h
        src/crypto/x16r/sph_cubehash.h
        src/crypto/x16r/sph_echo.h
        src/crypto/x16r/sph_fugue.c
        src/crypto/x16r/sph_fugue.h
        src/crypto/x16r/sph_groestl.h
        src/crypto/x16r/sph_hamsi.c
        src/crypto/x16r/sph_hamsi.h
        src/crypto/x16r/sph_hamsi_helper.c
        src/crypto/x16r/sph_jh.h
        src/crypto/x16r/sph_keccak.h
        src/crypto/x16r/sph_luffa.h
        src/crypto/x16r/sph_sha2.c
        src/crypto/x16r/sph_sha2.h
        src/crypto/x16r/sph_sha512.c
        src/crypto/x16r/sph_shabal.c
        src/crypto/x16r/sph_shabal.h
        src/crypto/x16r/sph_shavite.h
        src/crypto/x16r/sph_simd.h
        src/crypto/x16r/sph_skein.h
        src/crypto/x16r/sph_types.h
        src/crypto/x16r/sph_whirlpool.c
        src/crypto/x16r/sph_whirlpool.h
        src/crypto/x16r/whirlpool.c
        src/crypto/x16r/whirlpoolx.c
        src/crypto/aes.cpp
        src/crypto/aes.h
        src/crypto/chacha20.cpp
        src/crypto/chacha20.h
        src/crypto/common.h
        src/crypto/hmac_sha256.cpp
        src/crypto/hmac_sha256.h
        src/crypto/hmac_sha512.cpp
        src/crypto/hmac_sha512.h
        src/crypto/ripemd160.cpp
        src/crypto/ripemd160.h
        src/crypto/sha1.cpp
        src/crypto/sha1.h
        src/crypto/sha256.cpp
        src/crypto/sha256.h
        src/crypto/sha256_avx2.cpp
        src/crypto/sha256_shani.cpp
        src/crypto/sha256_sse4.cpp
        src/crypto/sha256_sse41.cpp
        src/crypto/sha512.cpp
        src/crypto/sha512.h
        src/index/base.cpp
        src/index/base.h
        src/index/txindex.cpp
        src/index/txindex.h
        src/interfaces/handler.cpp
        src/interfaces/handler.h
        src/interfaces/node.cpp
        src/interfaces/node.h
        src/interfaces/wallet.cpp
        src/interfaces/wallet.h
        src/leveldb/db/autocompact_test.cc
        src/leveldb/db/builder.cc
        src/leveldb/db/builder.h
        src/leveldb/db/c.cc
        src/leveldb/db/c_test.c
        src/leveldb/db/corruption_test.cc
        src/leveldb/db/db_bench.cc
        src/leveldb/db/db_impl.cc
        src/leveldb/db/db_impl.h
        src/leveldb/db/db_iter.cc
        src/leveldb/db/db_iter.h
        src/leveldb/db/db_test.cc
        src/leveldb/db/dbformat.cc
        src/leveldb/db/dbformat.h
        src/leveldb/db/dbformat_test.cc
        src/leveldb/db/dumpfile.cc
        src/leveldb/db/fault_injection_test.cc
        src/leveldb/db/filename.cc
        src/leveldb/db/filename.h
        src/leveldb/db/filename_test.cc
        src/leveldb/db/leveldbutil.cc
        src/leveldb/db/log_format.h
        src/leveldb/db/log_reader.cc
        src/leveldb/db/log_reader.h
        src/leveldb/db/log_test.cc
        src/leveldb/db/log_writer.cc
        src/leveldb/db/log_writer.h
        src/leveldb/db/memtable.cc
        src/leveldb/db/memtable.h
        src/leveldb/db/recovery_test.cc
        src/leveldb/db/repair.cc
        src/leveldb/db/skiplist.h
        src/leveldb/db/skiplist_test.cc
        src/leveldb/db/snapshot.h
        src/leveldb/db/table_cache.cc
        src/leveldb/db/table_cache.h
        src/leveldb/db/version_edit.cc
        src/leveldb/db/version_edit.h
        src/leveldb/db/version_edit_test.cc
        src/leveldb/db/version_set.cc
        src/leveldb/db/version_set.h
        src/leveldb/db/version_set_test.cc
        src/leveldb/db/write_batch.cc
        src/leveldb/db/write_batch_internal.h
        src/leveldb/db/write_batch_test.cc
        src/leveldb/doc/bench/db_bench_sqlite3.cc
        src/leveldb/doc/bench/db_bench_tree_db.cc
        src/leveldb/helpers/memenv/memenv.cc
        src/leveldb/helpers/memenv/memenv.h
        src/leveldb/helpers/memenv/memenv_test.cc
        src/leveldb/include/leveldb/c.h
        src/leveldb/include/leveldb/cache.h
        src/leveldb/include/leveldb/comparator.h
        src/leveldb/include/leveldb/db.h
        src/leveldb/include/leveldb/dumpfile.h
        src/leveldb/include/leveldb/env.h
        src/leveldb/include/leveldb/filter_policy.h
        src/leveldb/include/leveldb/iterator.h
        src/leveldb/include/leveldb/options.h
        src/leveldb/include/leveldb/slice.h
        src/leveldb/include/leveldb/status.h
        src/leveldb/include/leveldb/table.h
        src/leveldb/include/leveldb/table_builder.h
        src/leveldb/include/leveldb/write_batch.h
        src/leveldb/issues/issue178_test.cc
        src/leveldb/issues/issue200_test.cc
        src/leveldb/port/win/stdint.h
        src/leveldb/port/atomic_pointer.h
        src/leveldb/port/port.h
        src/leveldb/port/port_example.h
        src/leveldb/port/port_posix.cc
        src/leveldb/port/port_posix.h
        src/leveldb/port/port_posix_sse.cc
        src/leveldb/port/port_win.cc
        src/leveldb/port/port_win.h
        src/leveldb/port/thread_annotations.h
        src/leveldb/table/block.cc
        src/leveldb/table/block.h
        src/leveldb/table/block_builder.cc
        src/leveldb/table/block_builder.h
        src/leveldb/table/filter_block.cc
        src/leveldb/table/filter_block.h
        src/leveldb/table/filter_block_test.cc
        src/leveldb/table/format.cc
        src/leveldb/table/format.h
        src/leveldb/table/iterator.cc
        src/leveldb/table/iterator_wrapper.h
        src/leveldb/table/merger.cc
        src/leveldb/table/merger.h
        src/leveldb/table/table.cc
        src/leveldb/table/table_builder.cc
        src/leveldb/table/table_test.cc
        src/leveldb/table/two_level_iterator.cc
        src/leveldb/table/two_level_iterator.h
        src/leveldb/util/arena.cc
        src/leveldb/util/arena.h
        src/leveldb/util/arena_test.cc
        src/leveldb/util/bloom.cc
        src/leveldb/util/bloom_test.cc
        src/leveldb/util/cache.cc
        src/leveldb/util/cache_test.cc
        src/leveldb/util/coding.cc
        src/leveldb/util/coding.h
        src/leveldb/util/coding_test.cc
        src/leveldb/util/comparator.cc
        src/leveldb/util/crc32c.cc
        src/leveldb/util/crc32c.h
        src/leveldb/util/crc32c_test.cc
        src/leveldb/util/env.cc
        src/leveldb/util/env_posix.cc
        src/leveldb/util/env_posix_test.cc
        src/leveldb/util/env_posix_test_helper.h
        src/leveldb/util/env_test.cc
        src/leveldb/util/env_win.cc
        src/leveldb/util/filter_policy.cc
        src/leveldb/util/hash.cc
        src/leveldb/util/hash.h
        src/leveldb/util/hash_test.cc
        src/leveldb/util/histogram.cc
        src/leveldb/util/histogram.h
        src/leveldb/util/logging.cc
        src/leveldb/util/logging.h
        src/leveldb/util/mutexlock.h
        src/leveldb/util/options.cc
        src/leveldb/util/posix_logger.h
        src/leveldb/util/random.h
        src/leveldb/util/status.cc
        src/leveldb/util/testharness.cc
        src/leveldb/util/testharness.h
        src/leveldb/util/testutil.cc
        src/leveldb/util/testutil.h
        src/libzerocoin/Accumulator.cpp
        src/libzerocoin/Accumulator.h
        src/libzerocoin/AccumulatorProofOfKnowledge.cpp
        src/libzerocoin/AccumulatorProofOfKnowledge.h
        src/libzerocoin/ArithmeticCircuit.cpp
        src/libzerocoin/ArithmeticCircuit.h
        src/libzerocoin/bignum.h
        src/libzerocoin/Bulletproofs.cpp
        src/libzerocoin/Bulletproofs.h
        src/libzerocoin/Coin.cpp
        src/libzerocoin/Coin.h
        src/libzerocoin/CoinSpend.cpp
        src/libzerocoin/CoinSpend.h
        src/libzerocoin/Commitment.cpp
        src/libzerocoin/Commitment.h
        src/libzerocoin/Denominations.cpp
        src/libzerocoin/Denominations.h
        src/libzerocoin/paramgen.cpp
        src/libzerocoin/ParamGeneration.cpp
        src/libzerocoin/ParamGeneration.h
        src/libzerocoin/Params.cpp
        src/libzerocoin/Params.h
        src/libzerocoin/PolynomialCommitment.cpp
        src/libzerocoin/PolynomialCommitment.h
        src/libzerocoin/SerialNumberSignatureOfKnowledge.cpp
        src/libzerocoin/SerialNumberSignatureOfKnowledge.h
        src/libzerocoin/SerialNumberSoK_small.cpp
        src/libzerocoin/SerialNumberSoK_small.h
        src/libzerocoin/SpendType.h
        src/libzerocoin/ZerocoinDefines.h
        src/libzerocoin/zkplib.h
        src/policy/feerate.cpp
        src/policy/feerate.h
        src/policy/fees.cpp
        src/policy/fees.h
        src/policy/policy.cpp
        src/policy/policy.h
        src/policy/rbf.cpp
        src/policy/rbf.h
        src/primitives/block.cpp
        src/primitives/block.h
        src/primitives/transaction.cpp
        src/primitives/transaction.h
        src/primitives/zerocoin.cpp
        src/primitives/zerocoin.h
        src/qt/veil/settings/settingsadvance.cpp
        src/qt/veil/settings/settingsadvance.h
        src/qt/veil/settings/settingsadvanceconsole.cpp
        src/qt/veil/settings/settingsadvanceconsole.h
        src/qt/veil/settings/settingsadvanceinformation.cpp
        src/qt/veil/settings/settingsadvanceinformation.h
        src/qt/veil/settings/settingsadvancenetwork.cpp
        src/qt/veil/settings/settingsadvancenetwork.h
        src/qt/veil/settings/settingsadvancepeers.cpp
        src/qt/veil/settings/settingsadvancepeers.h
        src/qt/veil/settings/settingsbackup.cpp
        src/qt/veil/settings/settingsbackup.h
        src/qt/veil/settings/settingschangepassword.cpp
        src/qt/veil/settings/settingschangepassword.h
        src/qt/veil/settings/settingsfaq.cpp
        src/qt/veil/settings/settingsfaq.h
        src/qt/veil/settings/settingsfaq01.cpp
        src/qt/veil/settings/settingsfaq01.h
        src/qt/veil/settings/settingsfaq02.cpp
        src/qt/veil/settings/settingsfaq02.h
        src/qt/veil/settings/settingsfaq03.cpp
        src/qt/veil/settings/settingsfaq03.h
        src/qt/veil/settings/settingsfaq04.cpp
        src/qt/veil/settings/settingsfaq04.h
        src/qt/veil/settings/settingsfaq05.cpp
        src/qt/veil/settings/settingsfaq05.h
        src/qt/veil/settings/settingsfaq06.cpp
        src/qt/veil/settings/settingsfaq06.h
        src/qt/veil/settings/settingsfaq07.cpp
        src/qt/veil/settings/settingsfaq07.h
        src/qt/veil/settings/settingsfaq08.cpp
        src/qt/veil/settings/settingsfaq08.h
        src/qt/veil/settings/settingsfaq09.cpp
        src/qt/veil/settings/settingsfaq09.h
        src/qt/veil/settings/settingsfaq10.cpp
        src/qt/veil/settings/settingsfaq10.h
        src/qt/veil/settings/settingsfaq11.cpp
        src/qt/veil/settings/settingsfaq11.h
        src/qt/veil/settings/settingsminting.cpp
        src/qt/veil/settings/settingsminting.h
        src/qt/veil/settings/settingsnetwork.cpp
        src/qt/veil/settings/settingsnetwork.h
        src/qt/veil/settings/settingspreferences.cpp
        src/qt/veil/settings/settingspreferences.h
        src/qt/veil/settings/settingsrestore.cpp
        src/qt/veil/settings/settingsrestore.h
        src/qt/veil/settings/settingsrestorefile.cpp
        src/qt/veil/settings/settingsrestorefile.h
        src/qt/veil/settings/settingsrestoreseed.cpp
        src/qt/veil/settings/settingsrestoreseed.h
        src/qt/veil/settings/settingswidget.cpp
        src/qt/veil/settings/settingswidget.h
        src/qt/veil/addresseswidget.cpp
        src/qt/veil/addresseswidget.h
        src/qt/veil/addressnewcontact.cpp
        src/qt/veil/addressnewcontact.h
        src/qt/veil/addressreceive.cpp
        src/qt/veil/addressreceive.h
        src/qt/veil/balance.cpp
        src/qt/veil/balance.h
        src/qt/veil/createpassword.cpp
        src/qt/veil/createpassword.h
        src/qt/veil/mainwindow.cpp
        src/qt/veil/mainwindow.h
        src/qt/veil/qtutils.cpp
        src/qt/veil/qtutils.h
        src/qt/veil/receivewidget.cpp
        src/qt/veil/receivewidget.h
        src/qt/veil/sendconfirmation.cpp
        src/qt/veil/sendconfirmation.h
        src/qt/veil/sendcontroldialog.cpp
        src/qt/veil/sendcontroldialog.h
        src/qt/veil/toast.cpp
        src/qt/veil/toast.h
        src/qt/veil/tooltipbalance.cpp
        src/qt/veil/tooltipbalance.h
        src/qt/veil/transactiondetaildialog.cpp
        src/qt/veil/transactiondetaildialog.h
        src/qt/veil/tutorialcreatewalletwidget.cpp
        src/qt/veil/tutorialcreatewalletwidget.h
        src/qt/veil/tutoriallanguageswidget.cpp
        src/qt/veil/tutoriallanguageswidget.h
        src/qt/veil/tutorialmnemoniccode.cpp
        src/qt/veil/tutorialmnemoniccode.h
        src/qt/veil/tutorialmnemonicrevealed.cpp
        src/qt/veil/tutorialmnemonicrevealed.h
        src/qt/veil/tutorialwidget.cpp
        src/qt/veil/tutorialwidget.h
        src/qt/veil/unlockpassworddialog.cpp
        src/qt/veil/unlockpassworddialog.h
        src/qt/veil/veilstatusbar.cpp
        src/qt/veil/veilstatusbar.h
        src/qt/addressbookpage.cpp
        src/qt/addressbookpage.h
        src/qt/addresstablemodel.cpp
        src/qt/addresstablemodel.h
        src/qt/askpassphrasedialog.cpp
        src/qt/askpassphrasedialog.h
        src/qt/bantablemodel.cpp
        src/qt/bantablemodel.h
        src/qt/bitcoinaddressvalidator.cpp
        src/qt/bitcoinaddressvalidator.h
        src/qt/bitcoinamountfield.cpp
        src/qt/bitcoinamountfield.h
        src/qt/bitcoingui.cpp
        src/qt/bitcoingui.h
        src/qt/veilstrings.cpp
        src/qt/bitcoinunits.cpp
        src/qt/bitcoinunits.h
        src/qt/callback.h
        src/qt/clientmodel.cpp
        src/qt/clientmodel.h
        src/qt/coincontroldialog.cpp
        src/qt/coincontroldialog.h
        src/qt/coincontroltreewidget.cpp
        src/qt/coincontroltreewidget.h
        src/qt/csvmodelwriter.cpp
        src/qt/csvmodelwriter.h
        src/qt/editaddressdialog.cpp
        src/qt/editaddressdialog.h
        src/qt/guiconstants.h
        src/qt/guiutil.cpp
        src/qt/guiutil.h
        src/qt/intro.cpp
        src/qt/intro.h
        src/qt/macdockiconhandler.h
        src/qt/macdockiconhandler.mm
        src/qt/macnotificationhandler.h
        src/qt/macnotificationhandler.mm
        src/qt/modaloverlay.cpp
        src/qt/modaloverlay.h
        src/qt/networkstyle.cpp
        src/qt/networkstyle.h
        src/qt/notificator.cpp
        src/qt/notificator.h
        src/qt/openuridialog.cpp
        src/qt/openuridialog.h
        src/qt/optionsdialog.cpp
        src/qt/optionsdialog.h
        src/qt/optionsmodel.cpp
        src/qt/optionsmodel.h
        src/qt/overviewpage.cpp
        src/qt/overviewpage.h
        src/qt/paymentrequestplus.cpp
        src/qt/paymentrequestplus.h
        src/qt/paymentserver.cpp
        src/qt/paymentserver.h
        src/qt/peertablemodel.cpp
        src/qt/peertablemodel.h
        src/qt/platformstyle.cpp
        src/qt/platformstyle.h
        src/qt/qvalidatedlineedit.cpp
        src/qt/qvalidatedlineedit.h
        src/qt/qvaluecombobox.cpp
        src/qt/qvaluecombobox.h
        src/qt/receivecoinsdialog.cpp
        src/qt/receivecoinsdialog.h
        src/qt/receiverequestdialog.cpp
        src/qt/receiverequestdialog.h
        src/qt/recentrequeststablemodel.cpp
        src/qt/recentrequeststablemodel.h
        src/qt/rpcconsole.cpp
        src/qt/rpcconsole.h
        src/qt/sendcoinsdialog.cpp
        src/qt/sendcoinsdialog.h
        src/qt/sendcoinsentry.cpp
        src/qt/sendcoinsentry.h
        src/qt/signverifymessagedialog.cpp
        src/qt/signverifymessagedialog.h
        src/qt/splashscreen.cpp
        src/qt/splashscreen.h
        src/qt/splashscreenveil.cpp
        src/qt/splashscreenveil.h
        src/qt/trafficgraphwidget.cpp
        src/qt/trafficgraphwidget.h
        src/qt/transactiondesc.cpp
        src/qt/transactiondesc.h
        src/qt/transactiondescdialog.cpp
        src/qt/transactiondescdialog.h
        src/qt/transactionfilterproxy.cpp
        src/qt/transactionfilterproxy.h
        src/qt/transactionrecord.cpp
        src/qt/transactionrecord.h
        src/qt/transactiontablemodel.cpp
        src/qt/transactiontablemodel.h
        src/qt/transactionview.cpp
        src/qt/transactionview.h
        src/qt/utilitydialog.cpp
        src/qt/utilitydialog.h
        src/qt/veil.cpp
        src/qt/walletframe.cpp
        src/qt/walletframe.h
        src/qt/walletmodel.cpp
        src/qt/walletmodel.h
        src/qt/walletmodeltransaction.cpp
        src/qt/walletmodeltransaction.h
        src/qt/walletview.cpp
        src/qt/walletview.h
        src/qt/winshutdownmonitor.cpp
        src/qt/winshutdownmonitor.h
        src/rpc/blockchain.cpp
        src/rpc/blockchain.h
        src/rpc/client.cpp
        src/rpc/client.h
        src/rpc/mining.cpp
        src/rpc/mining.h
        src/rpc/misc.cpp
        src/rpc/net.cpp
        src/rpc/protocol.cpp
        src/rpc/protocol.h
        src/rpc/rawtransaction.cpp
        src/rpc/rawtransaction.h
        src/rpc/register.h
        src/rpc/server.cpp
        src/rpc/server.h
        src/rpc/util.cpp
        src/rpc/util.h
        src/script/bitcoinconsensus.cpp
        src/script/bitcoinconsensus.h
        src/script/descriptor.cpp
        src/script/descriptor.h
        src/script/interpreter.cpp
        src/script/interpreter.h
        src/script/ismine.cpp
        src/script/ismine.h
        src/script/script.cpp
        src/script/script.h
        src/script/script_error.cpp
        src/script/script_error.h
        src/script/sigcache.cpp
        src/script/sigcache.h
        src/script/sign.cpp
        src/script/sign.h
        src/script/standard.cpp
        src/script/standard.h
        src/secp256k1/contrib/lax_der_parsing.c
        src/secp256k1/contrib/lax_der_parsing.h
        src/secp256k1/contrib/lax_der_privatekey_parsing.c
        src/secp256k1/contrib/lax_der_privatekey_parsing.h
        src/secp256k1/include/secp256k1.h
        src/secp256k1/include/secp256k1_ecdh.h
        src/secp256k1/include/secp256k1_generator.h
        src/secp256k1/include/secp256k1_mlsag.h
        src/secp256k1/include/secp256k1_rangeproof.h
        src/secp256k1/include/secp256k1_recovery.h
        src/secp256k1/include/secp256k1_schnorr.h
        src/secp256k1/include/secp256k1_surjectionproof.h
        src/secp256k1/include/secp256k1_whitelist.h
        src/secp256k1/src/java/org_bitcoin_NativeSecp256k1.c
        src/secp256k1/src/java/org_bitcoin_NativeSecp256k1.h
        src/secp256k1/src/java/org_bitcoin_Secp256k1Context.c
        src/secp256k1/src/java/org_bitcoin_Secp256k1Context.h
        src/secp256k1/src/modules/ecdh/main_impl.h
        src/secp256k1/src/modules/ecdh/tests_impl.h
        src/secp256k1/src/modules/generator/main_impl.h
        src/secp256k1/src/modules/generator/tests_impl.h
        src/secp256k1/src/modules/mlsag/main_impl.h
        src/secp256k1/src/modules/mlsag/tests_impl.h
        src/secp256k1/src/modules/rangeproof/borromean.h
        src/secp256k1/src/modules/rangeproof/borromean_impl.h
        src/secp256k1/src/modules/rangeproof/main_impl.h
        src/secp256k1/src/modules/rangeproof/pedersen.h
        src/secp256k1/src/modules/rangeproof/pedersen_impl.h
        src/secp256k1/src/modules/rangeproof/rangeproof.h
        src/secp256k1/src/modules/rangeproof/rangeproof_impl.h
        src/secp256k1/src/modules/rangeproof/tests_impl.h
        src/secp256k1/src/modules/recovery/main_impl.h
        src/secp256k1/src/modules/recovery/tests_impl.h
        src/secp256k1/src/modules/schnorr/main_impl.h
        src/secp256k1/src/modules/schnorr/schnorr.h
        src/secp256k1/src/modules/schnorr/schnorr_impl.h
        src/secp256k1/src/modules/schnorr/tests_impl.h
        src/secp256k1/src/modules/surjection/main_impl.h
        src/secp256k1/src/modules/surjection/surjection.h
        src/secp256k1/src/modules/surjection/surjection_impl.h
        src/secp256k1/src/modules/surjection/tests_impl.h
        src/secp256k1/src/modules/whitelist/main_impl.h
        src/secp256k1/src/modules/whitelist/tests_impl.h
        src/secp256k1/src/modules/whitelist/whitelist_impl.h
        src/secp256k1/src/basic-config.h
        src/secp256k1/src/bench.h
        src/secp256k1/src/bench_ecdh.c
        src/secp256k1/src/bench_internal.c
        src/secp256k1/src/bench_recover.c
        src/secp256k1/src/bench_sign.c
        src/secp256k1/src/bench_verify.c
        src/secp256k1/src/ecdsa.h
        src/secp256k1/src/ecdsa_impl.h
        src/secp256k1/src/eckey.h
        src/secp256k1/src/eckey_impl.h
        src/secp256k1/src/ecmult.h
        src/secp256k1/src/ecmult_const.h
        src/secp256k1/src/ecmult_const_impl.h
        src/secp256k1/src/ecmult_gen.h
        src/secp256k1/src/ecmult_gen_impl.h
        src/secp256k1/src/ecmult_impl.h
        src/secp256k1/src/field.h
        src/secp256k1/src/field_10x26.h
        src/secp256k1/src/field_10x26_impl.h
        src/secp256k1/src/field_5x52.h
        src/secp256k1/src/field_5x52_asm_impl.h
        src/secp256k1/src/field_5x52_impl.h
        src/secp256k1/src/field_5x52_int128_impl.h
        src/secp256k1/src/field_impl.h
        src/secp256k1/src/gen_context.c
        src/secp256k1/src/group.h
        src/secp256k1/src/group_impl.h
        src/secp256k1/src/hash.h
        src/secp256k1/src/hash_impl.h
        src/secp256k1/src/num.h
        src/secp256k1/src/num_gmp.h
        src/secp256k1/src/num_gmp_impl.h
        src/secp256k1/src/num_impl.h
        src/secp256k1/src/scalar.h
        src/secp256k1/src/scalar_4x64.h
        src/secp256k1/src/scalar_4x64_impl.h
        src/secp256k1/src/scalar_8x32.h
        src/secp256k1/src/scalar_8x32_impl.h
        src/secp256k1/src/scalar_impl.h
        src/secp256k1/src/scalar_low.h
        src/secp256k1/src/scalar_low_impl.h
        src/secp256k1/src/secp256k1.c
        src/secp256k1/src/testrand.h
        src/secp256k1/src/testrand_impl.h
        src/secp256k1/src/tests.c
        src/secp256k1/src/tests_exhaustive.c
        src/secp256k1/src/util.h
        src/support/allocators/secure.h
        src/support/allocators/zeroafterfree.h
        src/support/cleanse.cpp
        src/support/cleanse.h
        src/support/events.h
        src/support/lockedpool.cpp
        src/support/lockedpool.h
        src/test/addrman_tests.cpp
        src/test/allocator_tests.cpp
        src/test/amount_tests.cpp
        src/test/arith_uint256_tests.cpp
        src/test/base32_tests.cpp
        src/test/base58_tests.cpp
        src/test/base64_tests.cpp
        src/test/bech32_tests.cpp
        src/test/bip32_tests.cpp
        src/test/blockchain_tests.cpp
        src/test/blockencodings_tests.cpp
        src/test/bloom_tests.cpp
        src/test/bswap_tests.cpp
        src/test/checkqueue_tests.cpp
        src/test/coins_tests.cpp
        src/test/compress_tests.cpp
        src/test/crypto_tests.cpp
        src/test/cuckoocache_tests.cpp
        src/test/dbwrapper_tests.cpp
        src/test/denialofservice_tests.cpp
        src/test/descriptor_tests.cpp
        src/test/getarg_tests.cpp
        src/test/hash_tests.cpp
        src/test/key_io_tests.cpp
        src/test/key_tests.cpp
        src/test/libzerocoin_tests.cpp
        src/test/limitedmap_tests.cpp
        src/test/main_tests.cpp
        src/test/mempool_tests.cpp
        src/test/merkle_tests.cpp
        src/test/merkleblock_tests.cpp
        src/test/miner_tests.cpp
        src/test/monthly_rewards_tests.cpp
        src/test/multisig_tests.cpp
        src/test/net_tests.cpp
        src/test/netbase_tests.cpp
        src/test/pmt_tests.cpp
        src/test/policyestimator_tests.cpp
        src/test/pow_tests.cpp
        src/test/prevector_tests.cpp
        src/test/proofofstaketests.cpp
        src/test/raii_event_tests.cpp
        src/test/random_tests.cpp
        src/test/reverselock_tests.cpp
        src/test/rpc_tests.cpp
        src/test/sanity_tests.cpp
        src/test/scheduler_tests.cpp
        src/test/script_p2sh_tests.cpp
        src/test/script_standard_tests.cpp
        src/test/script_tests.cpp
        src/test/scriptnum10.h
        src/test/scriptnum_tests.cpp
        src/test/serialize_tests.cpp
        src/test/sighash_tests.cpp
        src/test/sigopcount_tests.cpp
        src/test/skiplist_tests.cpp
        src/test/streams_tests.cpp
        src/test/test_veil.cpp
        src/test/test_veil.h
        src/test/test_veil_fuzzy.cpp
        src/test/test_veil_main.cpp
        src/test/timedata_tests.cpp
        src/test/torcontrol_tests.cpp
        src/test/transaction_tests.cpp
        src/test/txindex_tests.cpp
        src/test/txvalidation_tests.cpp
        src/test/txvalidationcache_tests.cpp
        src/test/uint256_tests.cpp
        src/test/util_tests.cpp
        src/test/validation_block_tests.cpp
        src/test/versionbits_tests.cpp
        src/test/zerocoin_denomination_tests.cpp
        src/test/zerocoin_implementation_tests.cpp
        src/test/zerocoin_transactions_tests.cpp
        src/univalue/gen/gen.cpp
        src/univalue/include/univalue.h
        src/univalue/lib/univalue.cpp
        src/univalue/lib/univalue_escapes.h
        src/univalue/lib/univalue_get.cpp
        src/univalue/lib/univalue_read.cpp
        src/univalue/lib/univalue_utffilter.h
        src/univalue/lib/univalue_write.cpp
        src/univalue/test/no_nul.cpp
        src/univalue/test/object.cpp
        src/univalue/test/test_json.cpp
        src/univalue/test/unitester.cpp
        src/veil/mnemonic/arrayslice.h
        src/veil/mnemonic/dictionary.cpp
        src/veil/mnemonic/dictionary.h
        src/veil/mnemonic/generateseed.cpp
        src/veil/mnemonic/generateseed.h
        src/veil/mnemonic/mnemonic.cpp
        src/veil/mnemonic/mnemonic.h
        src/veil/mnemonic/mnemonicwalletinit.cpp
        src/veil/mnemonic/mnemonicwalletinit.h
        src/veil/mnemonic/walletinitflags.h
        src/veil/proofoffullnode/proofoffullnode.cpp
        src/veil/proofoffullnode/proofoffullnode.h
        src/veil/proofofstake/blockvalidation.cpp
        src/veil/proofofstake/blockvalidation.h
        src/veil/proofofstake/kernel.cpp
        src/veil/proofofstake/kernel.h
        src/veil/proofofstake/stakeinput.cpp
        src/veil/proofofstake/stakeinput.h
        src/veil/qt/mnemonicdialog.cpp
        src/veil/qt/mnemonicdialog.h
        src/veil/qt/mnemonicdisplay.cpp
        src/veil/qt/mnemonicdisplay.h
        src/veil/ringct/anon.cpp
        src/veil/ringct/anon.h
        src/veil/ringct/blind.cpp
        src/veil/ringct/blind.h
        src/veil/ringct/extkey.cpp
        src/veil/ringct/extkey.h
        src/veil/ringct/anonwallet.cpp
        src/veil/ringct/anonwallet.h
        src/veil/ringct/anonwalletdb.cpp
        src/veil/ringct/anonwalletdb.h
        src/veil/ringct/keyutil.cpp
        src/veil/ringct/keyutil.h
        src/veil/ringct/rpcanonwallet.cpp
        src/veil/ringct/rpcanonwallet.h
        src/veil/ringct/stealth.cpp
        src/veil/ringct/stealth.h
        src/veil/ringct/types.h
        src/veil/zerocoin/accumulatormap.cpp
        src/veil/zerocoin/accumulatormap.h
        src/veil/zerocoin/accumulators.cpp
        src/veil/zerocoin/accumulators.h
        src/veil/zerocoin/denomination_functions.cpp
        src/veil/zerocoin/denomination_functions.h
        src/veil/zerocoin/mintpool.cpp
        src/veil/zerocoin/mintpool.h
        src/veil/zerocoin/zchain.cpp
        src/veil/zerocoin/zchain.h
        src/veil/zerocoin/ztracker.cpp
        src/veil/zerocoin/ztracker.h
        src/veil/zerocoin/zwallet.cpp
        src/veil/zerocoin/zwallet.h
        src/veil/budget.cpp
        src/veil/budget.h
        src/veil/dandelioninventory.cpp
        src/veil/dandelioninventory.h
        src/wallet/test/coinselector_tests.cpp
        src/wallet/test/psbt_wallet_tests.cpp
        src/wallet/test/wallet_crypto_tests.cpp
        src/wallet/test/wallet_test_fixture.cpp
        src/wallet/test/wallet_test_fixture.h
        src/wallet/test/wallet_tests.cpp
        src/wallet/coincontrol.cpp
        src/wallet/coincontrol.h
        src/wallet/coinselection.cpp
        src/wallet/coinselection.h
        src/wallet/crypter.cpp
        src/wallet/crypter.h
        src/wallet/db.cpp
        src/wallet/db.h
        src/wallet/deterministicmint.cpp
        src/wallet/deterministicmint.h
        src/wallet/feebumper.cpp
        src/wallet/feebumper.h
        src/wallet/fees.cpp
        src/wallet/fees.h
        src/wallet/init.cpp
        src/wallet/init.h
        src/wallet/rpcdump.cpp
        src/wallet/rpcwallet.cpp
        src/wallet/rpcwallet.h
        src/wallet/rpczerocoin.cpp
        src/wallet/wallet.cpp
        src/wallet/wallet.h
        src/wallet/walletdb.cpp
        src/wallet/walletdb.h
        src/wallet/walletutil.cpp
        src/wallet/walletutil.h
        src/zmq/zmqabstractnotifier.cpp
        src/zmq/zmqabstractnotifier.h
        src/zmq/zmqconfig.h
        src/zmq/zmqnotificationinterface.cpp
        src/zmq/zmqnotificationinterface.h
        src/zmq/zmqpublishnotifier.cpp
        src/zmq/zmqpublishnotifier.h
        src/zmq/zmqrpc.cpp
        src/zmq/zmqrpc.h
        src/addrdb.cpp
        src/addrdb.h
        src/addrman.cpp
        src/addrman.h
        src/amount.h
        src/arith_uint256.cpp
        src/arith_uint256.h
        src/base58.cpp
        src/base58.h
        src/bech32.cpp
        src/bech32.h
        src/blockencodings.cpp
        src/blockencodings.h
        src/bloom.cpp
        src/bloom.h
        src/chain.cpp
        src/chain.h
        src/chainparams.cpp
        src/chainparams.h
        src/chainparamsbase.cpp
        src/chainparamsbase.h
        src/chainparamsseeds.h
        src/checkpoints.cpp
        src/checkpoints.h
        src/checkqueue.h
        src/clientversion.cpp
        src/clientversion.h
        src/coins.cpp
        src/coins.h
        src/compat.h
        src/compressor.cpp
        src/compressor.h
        src/core_io.h
        src/core_memusage.h
        src/core_read.cpp
        src/core_write.cpp
        src/cuckoocache.h
        src/dbwrapper.cpp
        src/dbwrapper.h
        src/fs.cpp
        src/fs.h
        src/hash.cpp
        src/hash.h
        src/httprpc.cpp
        src/httprpc.h
        src/httpserver.cpp
        src/httpserver.h
        src/indirectmap.h
        src/init.cpp
        src/init.h
        src/key.cpp
        src/key.h
        src/key_io.cpp
        src/key_io.h
        src/keystore.cpp
        src/keystore.h
        src/limitedmap.h
        src/logging.cpp
        src/logging.h
        src/memusage.h
        src/merkleblock.cpp
        src/merkleblock.h
        src/miner.cpp
        src/miner.h
        src/net.cpp
        src/net.h
        src/net_processing.cpp
        src/net_processing.h
        src/netaddress.cpp
        src/netaddress.h
        src/netbase.cpp
        src/netbase.h
        src/netmessagemaker.h
        src/noui.cpp
        src/noui.h
        src/outputtype.cpp
        src/outputtype.h
        src/pow.cpp
        src/pow.h
        src/prevector.h
        src/protocol.cpp
        src/protocol.h
        src/pubkey.cpp
        src/pubkey.h
        src/random.cpp
        src/random.h
        src/veil/ringct/rctindex.h
        src/rest.cpp
        src/reverse_iterator.h
        src/reverselock.h
        src/scheduler.cpp
        src/scheduler.h
        src/serialize.h
        src/shutdown.cpp
        src/shutdown.h
        src/span.h
        src/streams.h
        src/sync.cpp
        src/sync.h
        src/threadinterrupt.cpp
        src/threadinterrupt.h
        src/threadsafety.h
        src/timedata.cpp
        src/timedata.h
        src/tinyformat.h
        src/torcontrol.cpp
        src/torcontrol.h
        src/txdb.cpp
        src/txdb.h
        src/txmempool.cpp
        src/txmempool.h
        src/ui_interface.cpp
        src/ui_interface.h
        src/uint256.cpp
        src/uint256.h
        src/undo.h
        src/util.cpp
        src/util.h
        src/utilmemory.h
        src/utilmoneystr.cpp
        src/utilmoneystr.h
        src/utilstrencodings.cpp
        src/utilstrencodings.h
        src/utiltime.cpp
        src/utiltime.h
        src/validation.cpp
        src/validation.h
        src/validationinterface.cpp
        src/validationinterface.h
        src/veil-cli.cpp
        src/veil-tx.cpp
        src/veild.cpp
        src/version.h
        src/versionbits.cpp
        src/versionbits.h
        src/walletinitinterface.h
        src/warnings.cpp
        src/warnings.h src/veil/zerocoin/spendreceipt.h src/veil/ringct/temprecipient.h src/veil/ringct/temprecipient.cpp src/veil/zerocoin/spendreceipt.cpp src/veil/ringct/outputrecord.cpp src/veil/ringct/outputrecord.h src/wallet/walletbalances.h src/veil/ringct/transactionrecord.h src/veil/zerocoin/mintmeta.h src/test/zerocoin_zkp_tests.cpp src/veil/zerocoin/lrucache.h src/veil/zerocoin/lrucache.cpp src/veil/zerocoin/precompute.h src/veil/zerocoin/precompute.cpp src/libzerocoin/PubcoinSignature.h src/libzerocoin/PubcoinSignature.cpp src/test/zerocoin_pubcoinsig_tests.cpp src/veil/invalid_list.h src/veil/invalid_list.cpp)

qt5_use_modules(veil Core Widgets Gui)
